--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,4 @@ chat:
     old-messages: "old-message-requests"
     output: "incoming-messages"
     reprocess-messages: "reprocess-messages"
+  file-api: "http://localhost:8080"
