--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,16 @@ management:
     web:
       exposure:
         include: health,prometheus
-
+server:
+  port: 8443
+  http2:
+    enabled: true
+  ssl:
+    key-store: /opt/message-receiver-api.p12
+    key-store-password: message-receiver-api
+    key-store-type: pkcs12
+    key-alias: message-receiver-api
+    key-password: message-receiver-api
 spring:
   jpa:
     hibernate:
@@ -24,3 +33,5 @@ chat:
     output: "incoming-messages"
     reprocess-messages: "reprocess-messages"
   file-api: "http://localhost:8080"
+  private-key: "/opt/message-receiver-api.key"
+  public-key: "/opt/message-receiver-api.crt"
