[15] No permitir el acceso a una sala a usuarios que no pertenecen a la misma

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 
+	implementation 'com.google.firebase:firebase-admin:8.1.0'
+
 	//REMOVE WHEN DB IS CONNECTED
 	runtimeOnly 'org.postgresql:postgresql'
 	//implementation 'org.liquibase:liquibase-core'
